performance improvement: changed from reuseForks=false (old setting: forkMode=always) to reuseForks=true (about 8 seconds faster)
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1595504 13f79535-47bb-0310-9956-ffa450edef68