@@ -115,7 +115,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <forkMode>always</forkMode>
+          <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
+          <forkCount>1</forkCount>
+          <reuseForks>true</reuseForks>
         </configuration>
       </plugin>
       <!-- Include the standard NOTICE and LICENSE -->
